--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL = "mongodb+srv://rvs07:O9XUJ9SklMZZihSo@cluster0.k08o2yu.mongodb.net/food-ordering"
+NEXTAUTH_URL = "http://localhost:3000/"
+SECRET = "rtghyyhjujkiklhmmk"
