add login with google

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL = "mongodb+srv://rvs07:O9XUJ9SklMZZihSo@cluster0.k08o2yu.mongodb.net/food-ordering"
 NEXTAUTH_URL = "http://localhost:3000/"
 SECRET = "rtghyyhjujkiklhmmk"
+GOOGLE_CLIENT_ID = "97088671770-pj42tf6u5mbr2qv2k9li5tn9rpfasv8i.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
