--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NEXTAUTH_URL = "http://localhost:3000/"
 SECRET = "rtghyyhjujkiklhmmk"
 GOOGLE_CLIENT_ID = "97088671770-pj42tf6u5mbr2qv2k9li5tn9rpfasv8i.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
+AWS_ACCESS_KEY="AKIAYS2NUODGFUK6UYZV"
+AWS_SECRET_KEY="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"
