--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.5.1",
+    "@aws-sdk/client-s3": "^3.540.0",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "next": "14.1.3",
+    "next": "^14.2.0-canary.55",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
